--- a/1-10.md
+++ b/1-10.md
@@ -42,5 +42,32 @@ select a.s_id,a.s_name,count(b.c_id) as sum_course,sum(b.s_score) as sum_score f
 	student a 
 	left join score b on a.s_id=b.s_id
 	GROUP BY a.s_id,a.s_name;
+## 6、查询"李"姓老师的数量 
+SELECT COUNT(t.`t_id`) FROM teacher t WHERE t.`t_name`LIKE'李%'
 
-	
+
+## 7、查询学过"张三"老师授课的同学的信息 
+SELECT a.* FROM student a,score b,teacher c,course d
+WHERE a.`s_id`=b.`s_id`AND b.`c_id`=d.`c_id`AND d.`t_id`=c.`t_id`
+AND c.`t_name`='张三'
+
+原博主的解法：
+select a.* from 
+	student a 
+	join score b on a.s_id=b.s_id where b.c_id in(
+		select c_id from course where t_id =(
+			select t_id from teacher where t_name = '张三'));
+
+## 8、查询没学过"张三"老师授课的同学的信息 
+SELECT DISTINCT a.* FROM student a,score b,teacher c,course d
+WHERE a.`s_id`=b.`s_id`AND b.`c_id`=d.`c_id`AND d.`t_id`=c.`t_id`
+AND c.`t_name`<>'张三'
+
+## 9、查询学过编号为"01"并且也学过编号为"02"的课程的同学的信息
+SELECT a.* FROM student a,score b,score c
+WHERE a.`s_id`=b.`s_id`AND a.`s_id`=c.`s_id`AND b.`c_id`='01'AND c.`c_id`='02'
+
+## 10、查询学过编号为"01"但是没有学过编号为"02"的课程的同学的信息
+SELECT a.* FROM student a
+WHERE a.`s_id`IN(SELECT s_id FROM score WHERE c_id='01')
+AND a.`s_id`NOT IN(SELECT s_id FROM score WHERE c_id='02')
