--- a/11-20.md
+++ b/11-20.md
@@ -1,1 +1,13 @@
+# 11-20题
+## 11、查询没有学全所有课程的同学的信息 
 
+select *
+from student
+where s_id not in(
+select s_id from score t1  
+group by s_id having count(*) =(select count(distinct c_id)  from course)) 
+
+## 12、查询至少有一门课与学号为"01"的同学所学相同的同学的信息 
+select * from student where s_id in(
+	select distinct a.s_id from score a where a.c_id in(select a.c_id from score a where a.s_id='01')
+	);
